[NTPFooter] Fix icon issues
This CL fixes the blurry icon on Mac by directly using the svg in WebUI.
By using cr-icon and setting the fill color, we also fix the issue of
the icon not responding to theme changes.

As a result of this change, the custom logo flag in the
`ManagementNotice` is no longer needed as we can solely rely on whether
a bitmap url is present. The presence of a bitmap url will indicate a
custom logo.

Screencast:
http://screencast/cast/NjY5ODcyNTYxMDA5NDU5MnxiOGE0OGQ2MC04Nw

Fixed: 424474674,425891048
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6656137
Commit-Queue: Salma Elmahallawy <esalma@google.com>
Cr-Commit-Position: refs/heads/main@{#1476727}

--- a/chrome/browser/resources/new_tab_footer/app.css
+++ b/chrome/browser/resources/new_tab_footer/app.css
@@ -91,7 +91,12 @@
   border-radius: 8px;
 }
 
+#managementNoticeLogoContainer > cr-icon,
 #managementNoticeLogoContainer > img {
   width: 20px;
   height: 20px;
+}
+
+cr-icon {
+   --iron-icon-fill-color: var(--color-new-tab-footer-text);
 }
